Add instructions cell to top of dashboard.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -17,20 +17,12 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/matplotlib/font_manager.py:279: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
-      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/matplotlib/font_manager.py:279: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipympl\n",
     "from ipywidgets import *\n",
@@ -51,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -66,6 +58,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -81,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -96,6 +91,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -152,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -171,6 +169,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -257,6 +258,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -296,6 +300,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -321,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -336,6 +343,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -351,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -366,6 +376,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -381,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -396,6 +409,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -411,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -426,6 +442,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -441,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -456,6 +475,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -476,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -491,6 +513,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -511,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -526,6 +551,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -544,8 +572,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 2,
+       "row": 0,
+       "width": 12
+      }
+     }
+    }
+   },
+   "source": [
+    "# Move sliders to vary storm parameters."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -562,6 +608,16 @@
        "report_default": {
         "hidden": false
        }
+      }
+     }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 18,
+       "row": 2,
+       "width": 12
       }
      }
     }
@@ -597,9 +653,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [rsmdash]",
+   "display_name": "Python [widgets]",
    "language": "python",
-   "name": "Python [rsmdash]"
+   "name": "Python [widgets]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -613,9 +669,24 @@
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
   },
+  "urth": {
+   "dashboard": {
+    "cellMargin": 10,
+    "defaultCellHeight": 20,
+    "layoutStrategy": "packed",
+    "maxColumns": 12
+   }
+  },
   "widgets": {
    "state": {
-    "d7ecd6a9a9e447b28aa7853962180f10": {
+    "c4f7a8106d3248608833a13d00d89075": {
+     "views": [
+      {
+       "cell_index": 14
+      }
+     ]
+    },
+    "de0f6059492b4ca4894e0cda2dc91468": {
      "views": [
       {
        "cell_index": 13
