Added instructions cell.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -577,10 +577,10 @@
     "urth": {
      "dashboard": {
       "layout": {
-       "col": 0,
+       "col": 3,
        "height": 2,
        "row": 0,
-       "width": 12
+       "width": 6
       }
      }
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -615,7 +615,7 @@
      "dashboard": {
       "layout": {
        "col": 0,
-       "height": 18,
+       "height": 17,
        "row": 2,
        "width": 12
       }
@@ -628,6 +628,44 @@
     "                   LonNorth_slider, LonSouth_slider, alpha_slider])\n",
     "HBox([fig_canvas, slider_box])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 6,
+       "row": 19,
+       "width": 12
+      }
+     }
+    }
+   },
+   "source": [
+    "1) Yellow line indicates storm path.\n",
+    "\n",
+    "2) Move longitude sliders to vary storm path segment endpoints, indicated by red stars.\n",
+    "\n",
+    "3) Segment endpoint longitudes are varied across fixed latitudes, indicated by green lines.\n",
+    "\n",
+    "4) Opacity controls the transparency of the surge contour plot over the base map layer.\n",
+    "\n",
+    "5) Pan, zoom, reset, download, and export controls are located directely beneath tha map."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "urth": {
+     "dashboard": {}
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -679,17 +717,10 @@
   },
   "widgets": {
    "state": {
-    "c4f7a8106d3248608833a13d00d89075": {
+    "765f4dc8ea9e4cfcbb204267cbf3ba9a": {
      "views": [
       {
        "cell_index": 14
-      }
-     ]
-    },
-    "de0f6059492b4ca4894e0cda2dc91468": {
-     "views": [
-      {
-       "cell_index": 13
       }
      ]
     }
