Add nbextension enable and install for ipympl.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -17,9 +17,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -58,9 +55,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -91,9 +85,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -160,7 +151,7 @@
        "grid_default": {
         "col": 0,
         "height": 7,
-        "hidden": false,
+        "hidden": true,
         "row": 18,
         "width": 4
        },
@@ -169,9 +160,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -258,9 +246,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -300,9 +285,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -343,9 +325,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -376,9 +355,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -409,9 +385,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -442,9 +415,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -475,9 +445,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -513,9 +480,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -551,9 +515,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -574,13 +535,20 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 3,
-       "height": 2,
-       "row": 0,
-       "width": 6
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 3,
+        "height": 2,
+        "hidden": false,
+        "row": 0,
+        "width": 6
+       },
+       "report_default": {
+        "hidden": false
+       }
       }
      }
     }
@@ -600,24 +568,14 @@
       "views": {
        "grid_default": {
         "col": 0,
-        "height": 18,
+        "height": 17,
         "hidden": false,
-        "row": 0,
+        "row": 2,
         "width": 12
        },
        "report_default": {
         "hidden": false
        }
-      }
-     }
-    },
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 0,
-       "height": 17,
-       "row": 2,
-       "width": 12
       }
      }
     }
@@ -632,13 +590,20 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 0,
-       "height": 6,
-       "row": 19,
-       "width": 12
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 6,
+        "hidden": false,
+        "row": 19,
+        "width": 12
+       },
+       "report_default": {
+        "hidden": false
+       }
       }
      }
     }
@@ -660,8 +625,18 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "urth": {
-     "dashboard": {}
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "hidden": true
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
     }
    },
    "outputs": [],
@@ -691,9 +666,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [widgets]",
+   "display_name": "Python [rsmdash]",
    "language": "python",
-   "name": "Python [widgets]"
+   "name": "Python [rsmdash]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -705,19 +680,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  },
-  "urth": {
-   "dashboard": {
-    "cellMargin": 10,
-    "defaultCellHeight": 20,
-    "layoutStrategy": "packed",
-    "maxColumns": 12
-   }
+   "version": "3.4.5"
   },
   "widgets": {
    "state": {
-    "765f4dc8ea9e4cfcbb204267cbf3ba9a": {
+    "f69f290a962b4615bacf3afc985abfee": {
      "views": [
       {
        "cell_index": 14
