--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -17,6 +17,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -55,6 +58,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -85,6 +91,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -160,6 +169,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -246,6 +258,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -285,6 +300,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -325,6 +343,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -355,6 +376,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -385,6 +409,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -415,6 +442,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -445,6 +475,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -480,6 +513,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -515,6 +551,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -551,6 +590,16 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 3,
+       "height": 2,
+       "row": 0,
+       "width": 6
+      }
+     }
     }
    },
    "source": [
@@ -576,6 +625,16 @@
        "report_default": {
         "hidden": false
        }
+      }
+     }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 18,
+       "row": 2,
+       "width": 12
       }
      }
     }
@@ -606,6 +665,16 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 6,
+       "row": 20,
+       "width": 12
+      }
+     }
     }
    },
    "source": [
@@ -621,8 +690,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "extensions": {
@@ -637,10 +705,21 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 2,
+       "row": 26,
+       "width": 12
+      }
+     }
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "**This material is based upon work supported by the U.S. Department of Homeland Security under Grant Award Number 2015-ST-061-ND0001-01.**"
+   ]
   }
  ],
  "metadata": {
@@ -666,9 +745,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [rsmdash]",
+   "display_name": "Python [widgets]",
    "language": "python",
-   "name": "Python [rsmdash]"
+   "name": "Python [widgets]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -680,11 +759,19 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.5.2"
+  },
+  "urth": {
+   "dashboard": {
+    "cellMargin": 10,
+    "defaultCellHeight": 20,
+    "layoutStrategy": "packed",
+    "maxColumns": 12
+   }
   },
   "widgets": {
    "state": {
-    "f69f290a962b4615bacf3afc985abfee": {
+    "d46f381ad4824ff8b83062a0e9a14b42": {
      "views": [
       {
        "cell_index": 14
