--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -1,8 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 2,
+        "hidden": false,
+        "row": 28,
+        "width": 12
+       },
+       "report_default": {}
+      }
+     }
+    }
+   },
+   "source": [
+    "Copyright (c) 2016, University of North Carolina Renaissance Computing Institute"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "extensions": {
@@ -17,12 +39,8 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
-   "outputs": [],
    "source": [
     "import ipympl\n",
     "from ipywidgets import *\n",
@@ -58,9 +76,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -91,9 +106,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -170,9 +182,7 @@
       }
      }
     },
-    "urth": {
-     "dashboard": {}
-    }
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -258,9 +268,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -300,9 +307,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -343,9 +347,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -376,9 +377,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -409,9 +407,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -442,9 +437,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -475,9 +467,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -513,9 +502,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -551,9 +537,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {}
     }
    },
    "outputs": [],
@@ -590,16 +573,6 @@
        }
       }
      }
-    },
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 3,
-       "height": 2,
-       "row": 0,
-       "width": 6
-      }
-     }
     }
    },
    "source": [
@@ -617,7 +590,7 @@
       "views": {
        "grid_default": {
         "col": 0,
-        "height": 17,
+        "height": 18,
         "hidden": false,
         "row": 2,
         "width": 12
@@ -625,16 +598,6 @@
        "report_default": {
         "hidden": false
        }
-      }
-     }
-    },
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 0,
-       "height": 18,
-       "row": 2,
-       "width": 12
       }
      }
     }
@@ -657,22 +620,12 @@
         "col": 0,
         "height": 6,
         "hidden": false,
-        "row": 19,
+        "row": 20,
         "width": 12
        },
        "report_default": {
         "hidden": false
        }
-      }
-     }
-    },
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 0,
-       "height": 6,
-       "row": 20,
-       "width": 12
       }
      }
     }
@@ -698,21 +651,15 @@
       "version": 1,
       "views": {
        "grid_default": {
-        "hidden": true
+        "col": 0,
+        "height": 2,
+        "hidden": false,
+        "row": 26,
+        "width": 12
        },
        "report_default": {
         "hidden": false
        }
-      }
-     }
-    },
-    "urth": {
-     "dashboard": {
-      "layout": {
-       "col": 0,
-       "height": 2,
-       "row": 26,
-       "width": 12
       }
      }
     }
@@ -745,9 +692,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [widgets]",
+   "display_name": "Python [rsmdash]",
    "language": "python",
-   "name": "Python [widgets]"
+   "name": "Python [rsmdash]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -761,17 +708,9 @@
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
   },
-  "urth": {
-   "dashboard": {
-    "cellMargin": 10,
-    "defaultCellHeight": 20,
-    "layoutStrategy": "packed",
-    "maxColumns": 12
-   }
-  },
   "widgets": {
    "state": {
-    "d46f381ad4824ff8b83062a0e9a14b42": {
+    "ef6a59197455453bbb7e98886ee2e00b": {
      "views": [
       {
        "cell_index": 14
