Restore code cell type.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -24,9 +24,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -41,6 +42,7 @@
      }
     }
    },
+   "outputs": [],
    "source": [
     "import ipympl\n",
     "from ipywidgets import *\n",
@@ -707,18 +709,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {
-    "ef6a59197455453bbb7e98886ee2e00b": {
-     "views": [
-      {
-       "cell_index": 14
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
