--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -17,6 +17,16 @@
        "report_default": {}
       }
      }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 2,
+       "row": 28,
+       "width": 12
+      }
+     }
     }
    },
    "source": [
@@ -25,9 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -39,6 +49,11 @@
         "hidden": false
        }
       }
+     }
+    },
+    "urth": {
+     "dashboard": {
+      "hidden": true
      }
     }
    },
@@ -78,6 +93,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -108,6 +126,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -184,7 +205,10 @@
       }
      }
     },
-    "scrolled": true
+    "scrolled": true,
+    "urth": {
+     "dashboard": {}
+    }
    },
    "outputs": [],
    "source": [
@@ -270,6 +294,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -309,6 +336,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -349,6 +379,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -379,6 +412,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -409,6 +445,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -439,6 +478,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -469,6 +511,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -504,6 +549,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -539,6 +587,9 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {}
     }
    },
    "outputs": [],
@@ -575,6 +626,16 @@
        }
       }
      }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 3,
+       "height": 2,
+       "row": 0,
+       "width": 6
+      }
+     }
     }
    },
    "source": [
@@ -600,6 +661,16 @@
        "report_default": {
         "hidden": false
        }
+      }
+     }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 18,
+       "row": 2,
+       "width": 11
       }
      }
     }
@@ -628,6 +699,16 @@
        "report_default": {
         "hidden": false
        }
+      }
+     }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 6,
+       "row": 20,
+       "width": 12
       }
      }
     }
@@ -662,6 +743,16 @@
        "report_default": {
         "hidden": false
        }
+      }
+     }
+    },
+    "urth": {
+     "dashboard": {
+      "layout": {
+       "col": 0,
+       "height": 2,
+       "row": 26,
+       "width": 12
       }
      }
     }
@@ -709,6 +800,26 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "urth": {
+   "dashboard": {
+    "cellMargin": 10,
+    "defaultCellHeight": 20,
+    "layoutStrategy": "packed",
+    "maxColumns": 12
+   }
+  },
+  "widgets": {
+   "state": {
+    "7abeda17b38c4c72a27297e3834ab2c9": {
+     "views": [
+      {
+       "cell_index": 15
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
