Python 2 backwards compatibility.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -40,7 +40,8 @@
     }
    ],
    "source": [
-    "%autosave 0"
+    "%autosave 0\n",
+    "from __future__ import print_function"
    ]
   },
   {
@@ -764,7 +765,7 @@
   },
   "widgets": {
    "state": {
-    "bfad81f6fcd0458ca4c3e5a92fef9304": {
+    "1ab3f7f6b55a4243a1a7a2091675d448": {
      "views": [
       {
        "cell_index": 16
