Assoc files into bundle.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -70,6 +70,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 4,
+        "hidden": false,
+        "row": 30,
+        "width": 4
+       },
+       "report_default": {}
+      }
+     }
+    }
+   },
+   "source": [
+    "<!--associate:\n",
+    "temp3.mat\n",
+    "central_ckv.py\n",
+    "-->"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -90,6 +116,12 @@
    },
    "outputs": [],
    "source": [
+    "# Above this cell is a hidden markdown cell.\n",
+    "# It is hidden because it contains only an associate comment used by jupyter_cms.\n",
+    "# The comment is visible when the cell is in edit mode.\n",
+    "# To see the see cell's markdown source, and hence, the comment,\n",
+    "# click on the blank space above this cell while running this notebook.\n",
+    "\n",
     "import ipympl\n",
     "from ipywidgets import *\n",
     "\n",
@@ -747,9 +779,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [rsmdash]",
+   "display_name": "Python [rsmbund]",
    "language": "python",
-   "name": "Python [rsmdash]"
+   "name": "Python [rsmbund]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -762,18 +794,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {
-    "1ab3f7f6b55a4243a1a7a2091675d448": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
