Set kernal to Python 3 regardless of conda environment name.

--- a/RSM-ipympl-basemap.ipynb
+++ b/RSM-ipympl-basemap.ipynb
@@ -264,7 +264,26 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/mpl_toolkits/basemap/__init__.py:3630: MatplotlibDeprecationWarning: The ishold function was deprecated in version 2.0.\n",
+      "  b = ax.ishold()\n",
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/mpl_toolkits/basemap/__init__.py:3699: MatplotlibDeprecationWarning: The hold function was deprecated in version 2.0.\n",
+      "  ax.hold(b)\n",
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/mpl_toolkits/basemap/__init__.py:3310: MatplotlibDeprecationWarning: The ishold function was deprecated in version 2.0.\n",
+      "  b = ax.ishold()\n",
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/mpl_toolkits/basemap/__init__.py:3319: MatplotlibDeprecationWarning: The hold function was deprecated in version 2.0.\n",
+      "  ax.hold(b)\n",
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/mpl_toolkits/basemap/__init__.py:3630: MatplotlibDeprecationWarning: The ishold function was deprecated in version 2.0.\n",
+      "  b = ax.ishold()\n",
+      "/home/cbc/anaconda3/envs/rsmdash/lib/python3.5/site-packages/mpl_toolkits/basemap/__init__.py:3699: MatplotlibDeprecationWarning: The hold function was deprecated in version 2.0.\n",
+      "  ax.hold(b)\n"
+     ]
+    }
+   ],
    "source": [
     "lon_offset = -82\n",
     "\n",
@@ -779,9 +798,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [rsmbund]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [rsmbund]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -794,6 +813,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {
+    "51442cc64f184461ac38cb1993d2f21d": {
+     "views": [
+      {
+       "cell_index": 17
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
